# Check-in-Project

./: .env.example  .gitignore  Excel导出功能说明.md  INSTALL.md  QUICKSTART.md  README.md  Tauri版本开发文档_技术实现指南.md  Tauri版本开发文档_项目需求规格说明.md  add_restroom_time_rule.sql  admin.html  create_release.sh  database_init.sql  fix_duration_data.sql  fix_time_rules_constraints.sql  index.html  package-lock.json  package.json  rebuild_database.sql  recreate_time_rules_table.sql  tailwind.config.js  test_hash.html  verify_admin.sql  vite.config.ts  上线前检查清单.md  安全性改进指南.md  性能优化报告.md  时长功能验证报告.md  时长计算修复说明.md  时长记录修复说明_20251223.md  跨日班次bug修复说明_20251223.md
.github/workflows/: README.md  build-release.yml
src/: App.tsx  admin.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: admin.rs  auth.rs  checkin.rs  mod.rs  statistics.rs
src-tauri/src/database/: mod.rs  supabase.rs
src-tauri/src/models/: action_type.rs  check_in.rs  mod.rs  time_rule.rs  user.rs
src-tauri/src/utils/: crypto.rs  mod.rs  time.rs
src/components/common/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Pagination.tsx
src/pages/: AdminPage.tsx  CheckInPage.tsx  LoginPage.tsx
src/services/: api.ts
src/store/: authStore.ts  cacheStore.ts  checkinStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: database.types.ts  index.ts
